@@ -1,5 +1,12 @@
 2007-08-23  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
+	* src/sapwood-render.c (theme_pixbuf_render): When painting centered
+	pixmaps don't expand but draw at most the size of the pixmap. Fixes
+	uninitialized garbage appearing on screen when painting an arrow that
+	is downscaled only in one direction.
+
+2007-08-23  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
 	* src/sapwood-pixmap.c (sapwood_pixmap_render_rects_internal): handle
 	mask == NULL without generating warnings
 
